--- a/config-templates/minimalConfigs/avalancheConfig.toml
+++ b/config-templates/minimalConfigs/avalancheConfig.toml
@@ -1,14 +1,18 @@
 ExplorerURL = 'wss://'
-RootDir = '/chainlink'
+RootDir = '/.chainlink'
 
 [Feature]
  FeedsManager = true
 
 [Log]
  Level = 'info'
+ JSONConsole = false
+ UnixTS = false
 
 [Log.File]
- MaxSize = '5120b'
+ MaxSize = '5120mb'
+ MaxAgeDays = 0
+ MaxBackups = 1
 
 [WebServer]
  AllowOrigins = '*'
@@ -17,9 +21,13 @@ RootDir = '/chainlink'
  CertPath = '/chainlink/tls/server.crt'
  KeyPath = '/chainlink/tls/server.key'
 
+[JobPipeline]
+
+[JobPipeline.HTTPRequest]
+ MaxSize = '700.00kb'
+
 [OCR]
  Enabled = true
- ObservationTimeout = '1s'
  KeyBundleID = ''
  TransmitterAddress = ''
 
@@ -32,23 +40,23 @@ RootDir = '/chainlink'
 [P2P.V2]
  Enabled = true
  AnnounceAddresses = ['']
- DefaultBootstrappers = ['']
+ DefaultBootstrappers = ['', '', '']
  ListenAddresses = ['']
 
 [[EVM]]
- ChainID = '250'
+ ChainID = '43114'
  Enabled = true
- LinkContractAddress = '0x6F43FF82CCA38001B6699a8AC47A2d0E66939407'
- MinContractPayment = '0.1 link'
+ LinkContractAddress = '0x5947BB275c521040051D82396192181b413227A3'
+ MinContractPayment = '0.00001 link'
+ MinIncomingConfirmations = 1
 
 [EVM.GasEstimator]
- BumpThreshold = 15
-
-[EVM.GasEstimator.BlockHistory]
- BlockHistorySize = 7
+ Mode = 'BlockHistory'
+ PriceDefault = '25 gwei'
+ PriceMin = '25 gwei'
 
 [[EVM.Nodes]]
- Name = 'Fantom_Mainnet_00'
+ Name = 'Avalanche_Mainnet_00'
  WSURL = 'wss://'
  HTTPURL = 'https://'
  SendOnly = false
