--- a/config-templates/minimalConfigs/ethereumConfig.toml
+++ b/config-templates/minimalConfigs/ethereumConfig.toml
@@ -1,26 +1,30 @@
 ExplorerURL = 'wss://'
-RootDir = '/chainlink'
+RootDir = '/.chainlink'
 
 [Feature]
  FeedsManager = true
 
 [Log]
  Level = 'info'
+ JSONConsole = false
+ UnixTS = false
 
 [Log.File]
  MaxSize = '5120mb'
+ MaxAgeDays = 0
+ MaxBackups = 1
 
 [WebServer]
  AllowOrigins = '*'
 
 [WebServer.TLS]
- CertPath = '/chainlink/tls/server.crt'
- KeyPath = '/chainlink/tls/server.key'
+CertPath = '/chainlink/tls/server.crt'
+KeyPath = '/chainlink/tls/server.key'
 
 [JobPipeline]
 
 [JobPipeline.HTTPRequest]
- DefaultTimeout = '6s'
+ DefaultTimeout = '15s'
 
 [OCR]
  Enabled = true
@@ -36,17 +40,17 @@ RootDir = '/chainlink'
 [P2P.V2]
  Enabled = true
  AnnounceAddresses = ['']
- DefaultBootstrappers = ['']
+ DefaultBootstrappers = ['', '', '', '']
  ListenAddresses = ['']
 
 [[EVM]]
- ChainID = '1088'
+ ChainID = '1'
  Enabled = true
- LinkContractAddress = '0x0000000000000000000000000000000000000000'
+ LinkContractAddress = '0x514910771AF9Ca656af840dff83E8264EcF986CA'
  MinContractPayment = '0.1 link'
 
 [[EVM.Nodes]]
- Name = 'Metis_Mainnet_00'
+ Name = 'Ethereum_Mainnet_00'
  WSURL = 'wss://'
  HTTPURL = 'https://'
  SendOnly = false
