--- a/config-templates/minimalConfigs/gnosisConfig.toml
+++ b/config-templates/minimalConfigs/gnosisConfig.toml
@@ -1,5 +1,4 @@
 ExplorerURL = 'wss://'
-
 RootDir = '/chainlink'
 
 [Feature]
@@ -12,7 +11,7 @@ RootDir = '/chainlink'
  MaxSize = '5120mb'
 
 [WebServer]
- AllowOrigins = '*'
+AllowOrigins = '*'
 
 [WebServer.TLS]
  CertPath = '/chainlink/tls/server.crt'
@@ -29,7 +28,7 @@ RootDir = '/chainlink'
  TransmitterAddress = ''
 
 [P2P]
- PeerID = ''
+PeerID = ''
 
 [P2P.V1]
  Enabled = false
@@ -37,20 +36,17 @@ RootDir = '/chainlink'
 [P2P.V2]
  Enabled = true
  AnnounceAddresses = ['']
- DefaultBootstrappers = ['']
+ DefaultBootstrappers = ['', '', '', '']
  ListenAddresses = ['']
 
 [[EVM]]
- ChainID = '1284'
+ ChainID = '100'
  Enabled = true
- LinkContractAddress = '0xf97f4df75117a78c1A5a0DBb814Af92458539FB4'
+ LinkContractAddress = '0xE2e73A1c69ecF83F464EFCE6A5be353a37cA09b2'
  MinContractPayment = '0.1 link'
 
-[EVM.GasEstimator]
- PriceMax = '100000000000000 tether'
-
 [[EVM.Nodes]]
- Name = 'Moonbeam_Mainnet_00'
+ Name = 'Gnosis_Mainnet_00'
  WSURL = 'wss://'
  HTTPURL = 'https://'
  SendOnly = false
