--- a/config-templates/minimalConfigs/moonriverConfig.toml
+++ b/config-templates/minimalConfigs/moonriverConfig.toml
@@ -1,6 +1,9 @@
 ExplorerURL = 'wss://'
+
 RootDir = '/chainlink'
-FeedsManager = true
+
+[Feature]
+ FeedsManager = true
 
 [Log]
  Level = 'info'
@@ -34,17 +37,21 @@ FeedsManager = true
 [P2P.V2]
  Enabled = true
  AnnounceAddresses = ['']
- DefaultBootstrappers = ['']
+ DefaultBootstrappers = ['', '', '', '']
  ListenAddresses = ['']
 
 [[EVM]]
- ChainID = '42161'
+ ChainID = '1285'
  Enabled = true
- LinkContractAddress = '0xf97f4df75117a78c1A5a0DBb814Af92458539FB4'
+ LinkContractAddress = '0x0000000000000000000000000000000000000000'
  MinContractPayment = '0.1 link'
 
+[EVM.GasEstimator]
+ Mode = 'BlockHistory'
+ BumpThreshold = 2
+
 [[EVM.Nodes]]
- Name = 'Arbitrum_Mainnet_00'
+ Name = 'Moonriver_Mainnet_00'
  WSURL = 'wss://'
  HTTPURL = 'https://'
  SendOnly = false
