--- a/config-templates/verboseConfigs/moonriverConfig.toml
+++ b/config-templates/verboseConfigs/moonriverConfig.toml
@@ -1,6 +1,10 @@
 #---------------------------#
 #          Global           #
 #---------------------------#
+# ExplorerURL
+# - ExplorerURL is the websocket URL for the node to push stats to.
+ExplorerURL = 'wss://'
+
 # RootDir
 # - RootDir is the Chainlink node's root directory.
 # - This is the default directory for logging, database backups, cookies, and other misc Chainlink node files.
@@ -14,6 +18,7 @@ RootDir = '/chainlink'
 #          Feature          #
 #---------------------------#
 [Feature]
+
 # FeedsManager
 # - FeedsManager enables the experimental feeds manager service.
 #
@@ -22,33 +27,31 @@ FeedsManager = true
 
 
 #---------------------------#
-#      Telemetry Ingress    #
-#---------------------------#
-[TelemetryIngress]
-
-# UniConn
-# - UniConn toggles which ws connection style is used.
-#
-# - Default is true
-UniConn = false
-
-# ServerPubKey
-# - ServerPubKey is the public key of the telemetry server.
-#
-# - Example: ServerPubKey = 'test-pub-key'
-ServerPubKey = ''
-
-# URL
-# - URL is where to send telemetry.
-#
-# - Example: URL = 'https://prom.test'
-URL = ''
-
-
-#---------------------------#
 #            Log            #
 #---------------------------#
 [Log]
+
+# Level
+# - Level determines both what is printed on the screen and what is written to the log file.
+#
+# - The available levels are:
+#  - "debug": Useful for forensic debugging of issues.
+#  - "info": High-level informational messages. (default)
+#  - "warn": A mild error occurred that might require non-urgent action.
+#    Check these warnings semi-regularly to see if any of them require attention.
+#    These warnings usually happen due to factors outside of the control of the node operator.
+#     - Examples: Unexpected responses from a remote API or misleading networking errors.
+#  - "error": An unexpected error occurred during the regular operation of a well-maintained node.
+#    Node operators might need to take action to remedy this error. Check these regularly to see if any of them require attention.
+#     - Examples: Use of deprecated configuration options or incorrectly configured settings that cause a job to fail.
+#  - "crit": A critical error occurred. The node might be unable to function.
+#    Node operators should take immediate action to fix these errors.
+#     - Examples: The node could not boot because a network socket could not be opened or the database became inaccessible.
+#  - "panic": An exceptional error occurred that could not be handled.
+#    If the node is unresponsive, node operators should try to restart their nodes and notify the Chainlink team of a potential bug.
+#  - "fatal": The node encountered an unrecoverable problem and had to exit.
+#
+# - Default is 'info'
 Level = 'info'
 
 
@@ -89,7 +92,6 @@ MaxSize = '5120mb'
 # - Default is 'http://localhost:3000,http://localhost:6688'
 AllowOrigins = '*'
 
-
 #---------------------------#
 #       Web Server TLS      #
 #---------------------------#
@@ -107,6 +109,24 @@ CertPath = '/chainlink/tls/server.crt'
 #
 # - Example: KeyPath = '/home/$USER/.chainlink/tls/server.key'
 KeyPath = '/chainlink/tls/server.key'
+
+
+#---------------------------#
+#        Job Pipeline       #
+#---------------------------#
+[JobPipeline]
+
+
+#---------------------------#
+# Job Pipeline HTTP Request #
+#---------------------------#
+[JobPipeline.HTTPRequest]
+
+# DefaultTimeout
+# - DefaultTimeout defines the default timeout for HTTP requests made by http and bridge adapters.
+#
+# - Default is '15s'
+DefaultTimeout = '6s'
 
 
 #---------------------------#
@@ -188,7 +208,7 @@ AnnounceAddresses = ['']
 # DefaultBootstrappers
 # - DefaultBootstrappers is the default bootstrapper peers for libocr's v2 networking stack.
 #
-# - Example: DefaultBootstrappers = ['$P2P_PEER_ID@1.2.3.4:9999', '$P2P_PEER_ID@example.com:1234'] 
+# - Example: DefaultBootstrappers = ['$P2P_PEER_ID@1.2.3.4:9999', '$P2P_PEER_ID@example.com:1234']
 DefaultBootstrappers = ['', '', '', '']
 
 # ListenAddresses
@@ -210,7 +230,7 @@ ListenAddresses = ['']
 # - Mandatory.
 #
 # - Example: ChainID = '1'
-ChainID = '10'
+ChainID = '1285'
 
 # Enabled
 # - Enabled enables this chain.
@@ -222,7 +242,7 @@ Enabled = true
 # - LinkContractAddress is the canonical ERC-677 LINK token contract address on the given chain. Note that this is usually autodetected from chain ID.
 #
 # - Example: LinkContractAddress = '0x538aAaB4ea120b2bC2fe5D296852D948F07D849e'
-LinkContractAddress = '0x350a791Bfc2C21F9Ed5d10980Dad2e2638ffa7f6'
+LinkContractAddress = '0x0000000000000000000000000000000000000000'
 
 # MinContractPayment
 # - MinContractPayment is the minimum payment in LINK required to execute a direct request job. This can be overridden on a per-job basis.
@@ -258,33 +278,13 @@ MinContractPayment = '0.1 link'
 # - We have found empirically that it is not generally safe to rely on the remote ETH node's idea of what gas price should be.
 #
 # - Default is 'BlockHistory'
-Mode = 'Optimism2'
+Mode = 'BlockHistory'
 
-
-#---------------------------#
-#  EVM Gas Est Blockhistory #
-#---------------------------#
-# - These settings allow you to configure how your node calculates gas prices when using the block history estimator.
-# - In most cases, leaving these values at their defaults should give good results.
-[EVM.GasEstimator.BlockHistory]
-
-# TransactionPercentile
-# - TransactionPercentile specifies gas price to choose.
-# - E.g. if the block history contains four transactions with gas prices [100, 200, 300, 400] then picking 25 for this number will give a value of 200.
-# - If the calculated gas price is higher than GasPriceDefault then the higher price will be used as the base price for new transactions.
+# BumpThreshold
+# - BumpThreshold is the number of blocks to wait for a transaction stuck in the mempool before automatically bumping the gas price. Set to 0 to disable gas bumping completely.
 #
-# - Must be in range 0-100.
-#
-# - Only has an effect if gas updater is enabled.
-#
-# - Think of this number as an indicator of how aggressive you want your node to price its transactions.
-#
-# - Setting this number higher will cause the Chainlink node to select higher gas prices.
-#
-# - Setting it lower will tend to set lower gas prices.
-#
-# - Default is 60
-TransactionPercentile = 75
+# - Default is 3
+BumpThreshold = 2
 
 
 #---------------------------#
@@ -296,7 +296,7 @@ TransactionPercentile = 75
 # - Name is a unique (per-chain) identifier for this node.
 #
 # - Example: Name = 'Ethereum_Mainnet_00'
-Name = 'Optimism_Mainnet_00'
+Name = 'Moonriver_Mainnet_00'
 
 # WSURL
 # - WSURL is the WS(S) endpoint for this node. Required for primary nodes.
