--- a/config-templates/verboseConfigs/optimismConfig.toml
+++ b/config-templates/verboseConfigs/optimismConfig.toml
@@ -1,10 +1,6 @@
 #---------------------------#
 #          Global           #
 #---------------------------#
-# ExplorerURL
-# - ExplorerURL is the websocket URL for the node to push stats to.
-ExplorerURL = 'wss://'
-
 # RootDir
 # - RootDir is the Chainlink node's root directory.
 # - This is the default directory for logging, database backups, cookies, and other misc Chainlink node files.
@@ -24,32 +20,35 @@ RootDir = '/chainlink'
 # - Default is set to false
 FeedsManager = true
 
+
+#---------------------------#
+#      Telemetry Ingress    #
+#---------------------------#
+[TelemetryIngress]
+
+# UniConn
+# - UniConn toggles which ws connection style is used.
+#
+# - Default is true
+UniConn = false
+
+# ServerPubKey
+# - ServerPubKey is the public key of the telemetry server.
+#
+# - Example: ServerPubKey = 'test-pub-key'
+ServerPubKey = ''
+
+# URL
+# - URL is where to send telemetry.
+#
+# - Example: URL = 'https://prom.test'
+URL = ''
+
+
 #---------------------------#
 #            Log            #
 #---------------------------#
 [Log]
-
-# Level
-# - Level determines both what is printed on the screen and what is written to the log file.
-#
-# - The available levels are:
-#  - "debug": Useful for forensic debugging of issues.
-#  - "info": High-level informational messages. (default)
-#  - "warn": A mild error occurred that might require non-urgent action.
-#    Check these warnings semi-regularly to see if any of them require attention.
-#    These warnings usually happen due to factors outside of the control of the node operator.
-#     - Examples: Unexpected responses from a remote API or misleading networking errors.
-#  - "error": An unexpected error occurred during the regular operation of a well-maintained node.
-#    Node operators might need to take action to remedy this error. Check these regularly to see if any of them require attention.
-#     - Examples: Use of deprecated configuration options or incorrectly configured settings that cause a job to fail.
-#  - "crit": A critical error occurred. The node might be unable to function.
-#    Node operators should take immediate action to fix these errors.
-#     - Examples: The node could not boot because a network socket could not be opened or the database became inaccessible.
-#  - "panic": An exceptional error occurred that could not be handled.
-#    If the node is unresponsive, node operators should try to restart their nodes and notify the Chainlink team of a potential bug.
-#  - "fatal": The node encountered an unrecoverable problem and had to exit.
-#
-# - Default is 'info'
 Level = 'info'
 
 
@@ -189,8 +188,8 @@ AnnounceAddresses = ['']
 # DefaultBootstrappers
 # - DefaultBootstrappers is the default bootstrapper peers for libocr's v2 networking stack.
 #
-# - Example: DefaultBootstrappers = ['$P2P_PEER_ID@1.2.3.4:9999', '$P2P_PEER_ID@example.com:1234'] 
-DefaultBootstrappers = ['']
+# - Example: DefaultBootstrappers = ['$P2P_PEER_ID@1.2.3.4:9999', '$P2P_PEER_ID@example.com:1234']
+DefaultBootstrappers = ['', '', '', '']
 
 # ListenAddresses
 # - ListenAddresses is the addresses the peer will listen to on the network in host:port form as accepted by net.Listen(),
@@ -211,7 +210,7 @@ ListenAddresses = ['']
 # - Mandatory.
 #
 # - Example: ChainID = '1'
-ChainID = '137'
+ChainID = '10'
 
 # Enabled
 # - Enabled enables this chain.
@@ -223,7 +222,7 @@ Enabled = true
 # - LinkContractAddress is the canonical ERC-677 LINK token contract address on the given chain. Note that this is usually autodetected from chain ID.
 #
 # - Example: LinkContractAddress = '0x538aAaB4ea120b2bC2fe5D296852D948F07D849e'
-LinkContractAddress = '0xb0897686c545045aFc77CF20eC7A532E3120E0F1'
+LinkContractAddress = '0x350a791Bfc2C21F9Ed5d10980Dad2e2638ffa7f6'
 
 # MinContractPayment
 # - MinContractPayment is the minimum payment in LINK required to execute a direct request job. This can be overridden on a per-job basis.
@@ -259,19 +258,7 @@ MinContractPayment = '0.1 link'
 # - We have found empirically that it is not generally safe to rely on the remote ETH node's idea of what gas price should be.
 #
 # - Default is 'BlockHistory'
-Mode = 'BlockHistory'
-
-# BumpMin
-# - BumpMin is the minimum fixed amount of wei by which gas is bumped on each transaction attempt.
-#
-# - Default is '5 gwei'
-BumpMin = '16 gwei'
-
-# BumpThreshold
-# - BumpThreshold is the number of blocks to wait for a transaction stuck in the mempool before automatically bumping the gas price. Set to 0 to disable gas bumping completely.
-#
-# - Default is 3
-BumpThreshold = 2
+Mode = 'Optimism2'
 
 
 #---------------------------#
@@ -280,12 +267,6 @@ BumpThreshold = 2
 # - These settings allow you to configure how your node calculates gas prices when using the block history estimator.
 # - In most cases, leaving these values at their defaults should give good results.
 [EVM.GasEstimator.BlockHistory]
-
-# BlockHistorySize
-# - BlockHistorySize controls the number of past blocks to keep in memory to use as a basis for calculating a percentile gas price.
-#
-# - Default is 8
-BlockHistorySize = 12
 
 # TransactionPercentile
 # - TransactionPercentile specifies gas price to choose.
@@ -315,7 +296,7 @@ TransactionPercentile = 75
 # - Name is a unique (per-chain) identifier for this node.
 #
 # - Example: Name = 'Ethereum_Mainnet_00'
-Name = 'Polygon_Mainnet_00'
+Name = 'Optimism_Mainnet_00'
 
 # WSURL
 # - WSURL is the WS(S) endpoint for this node. Required for primary nodes.
