--- a/config-templates/veryVerboseConfigs/fantomConfig.toml
+++ b/config-templates/veryVerboseConfigs/fantomConfig.toml
@@ -997,7 +997,7 @@ AnnounceAddresses = ['']
 # - DefaultBootstrappers is the default bootstrapper peers for libocr's v2 networking stack.
 #
 # - Example: DefaultBootstrappers = ['$P2P_PEER_ID@1.2.3.4:9999', '$P2P_PEER_ID@example.com:1234']
-DefaultBootstrappers = ['']
+DefaultBootstrappers = ['', '', '', '']
 
 # DeltaDial
 # - DeltaDial controls how far apart Dial attempts are
