add timeout for polygon

--- a/config-templates/minimalConfigs/polygonConfig.toml
+++ b/config-templates/minimalConfigs/polygonConfig.toml
@@ -18,6 +18,11 @@ RootDir = '/chainlink'
  CertPath = '/chainlink/tls/server.crt'
  KeyPath = '/chainlink/tls/server.key'
 
+[JobPipeline]
+
+[JobPipeline.HTTPRequest]
+ DefaultTimeout = '6s'
+
 [OCR]
  Enabled = true
  KeyBundleID = ''
