--- a/config-templates/verboseConfigs/polygonConfig.toml
+++ b/config-templates/verboseConfigs/polygonConfig.toml
@@ -111,6 +111,24 @@ KeyPath = '/chainlink/tls/server.key'
 
 
 #---------------------------#
+#        Job Pipeline       #
+#---------------------------#
+[JobPipeline]
+
+
+#---------------------------#
+# Job Pipeline HTTP Request #
+#---------------------------#
+[JobPipeline.HTTPRequest]
+
+# DefaultTimeout
+# - DefaultTimeout defines the default timeout for HTTP requests made by http and bridge adapters.
+#
+# - Default is '15s'
+DefaultTimeout = '6s'
+
+
+#---------------------------#
 #           OCR             #
 #---------------------------#
 # - This section applies only if you are running off-chain reporting jobs.
